Commit: se crea el archivo sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,14 @@
 sonar.projectKey=co.com.ceiba.alejandro.delgadillo:estacionamiento
 sonar.projectName=alejandro.delgadillo-estacionamiento
 
+#Datos de los fuentes y binarios
+sonar.sources=src/main/java
+
+sonar.java.source=1.8
+
+#Datos de los fuentes y binarios de los tests
+sonar.tests=src/test/java
+sonar.java.test.binaries=build/classes/java/test
 
 
 #Envío de reportes de JUnit y Jacoco como resultado de la tarea test
